added profile form in staff login page

--- a/SmS_System/SmS_System.vbproj
+++ b/SmS_System/SmS_System.vbproj
@@ -92,6 +92,12 @@
     <Compile Include="Form2.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="staffreg.Designer.vb">
+      <DependentUpon>staffreg.vb</DependentUpon>
+    </Compile>
+    <Compile Include="staffreg.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="profileform.Designer.vb">
       <DependentUpon>profileform.vb</DependentUpon>
     </Compile>
@@ -142,6 +148,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="staffreg.resx">
+      <DependentUpon>staffreg.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="profileform.resx">
       <DependentUpon>profileform.vb</DependentUpon>
